--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ venv/
 logs/
 venv
 /venv
+/customerchurnprediction.egg-info
+customerchurnprediction.egg-info/
+customerchurnprediction.egg-info
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
