hyper parameter commit

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ customerchurnprediction.egg-info/
 customerchurnprediction.egg-info
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*__pycache__
+/__pycache__
+/__pycache__/
 *.py[cod]
 *$py.class
 
